--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyPVpC/tAKMfk3LIN4TJ9aHs",
+      "authorship_tag": "ABX9TyN5EV1nBXKLwuOs3g1d4fZI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -642,8 +642,8 @@
         "    You are an expert assistant dedicated to providing answers for beginner systems engineers. Follow these guidelines:\n",
         "\n",
         "    1. Deliver clear, concise, and expert-level information in Turkish.\n",
-        "    2. Use the provided documents (###Context###) and historical conversation (###Previous Conversations###) data to answer questions (###Question###).\n",
-        "    3. Do not speculate or go beyond the given data.\n",
+        "    2. Use the provided documents (###Context###) and historical conversation (###Previous Conversations###) data to answer questions (###Question###). Reference these documents while interpreting and generating your answers.\n",
+        "    3. Do not speculate.\n",
         "    4. Ensure that your answers are coherent and free from any repetitive or duplicate content.\n",
         "    5. Each sentence should provide unique and valuable information.\n",
         "    6. You have to answer just in TURKISH.\n",
@@ -855,9 +855,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmc8yIwmcKIF",
-        "outputId": "ae309051-dc24-41a4-cb43-df1d2ea19833"
+        "outputId": "7370571a-c697-4bea-e34b-deeeb8858d58"
       },
-      "execution_count": 13,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,9 +880,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS_jqNDOdunC",
-        "outputId": "87b4fe26-dd1b-4cbf-a9c2-d7d11055eaad"
+        "outputId": "07fcef1f-7c74-4f91-e96e-8f2ad2d7db77"
       },
-      "execution_count": 14,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,16 +896,57 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.726s\n",
+            "updated 1 package and audited 36 packages in 0.443s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.106s\n",
-            "your url is: https://salty-bikes-switch.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.816s\n",
+            "your url is: https://quiet-donkeys-attend.loca.lt\n",
             "^C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Use a pipeline as a high-level helper\n",
+        "from transformers import pipeline\n",
+        "\n",
+        "messages = [\n",
+        "    {\"role\": \"user\", \"content\": \"risk yönetimi hakkında bilgi verir misin?\"},\n",
+        "]\n",
+        "pipe = pipeline(\"text-generation\", model=\"unsloth/llama-3-8b-Instruct-bnb-4bit\")\n",
+        "# Set max_new_tokens to control the length of generated text\n",
+        "result = pipe(messages, max_new_tokens=1024)  # Adjust the value as needed\n",
+        "print(result)"
+      ],
+      "metadata": {
+        "id": "NGk9SHVfnI24",
+        "outputId": "f2cb249c-252e-4158-9113-8fcd93a7577e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Unused kwargs: ['_load_in_4bit', '_load_in_8bit', 'quant_method']. These kwargs are not used in <class 'transformers.utils.quantization_config.BitsAndBytesConfig'>.\n",
+            "`low_cpu_mem_usage` was None, now set to True since model is quantized.\n",
+            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[{'generated_text': [{'role': 'user', 'content': 'risk yönetimi hakkında bilgi verir misin?'}, {'role': 'assistant', 'content': \"Risk management! It's a crucial aspect of any organization, as it helps identify, assess, and mitigate potential risks that could impact its operations, reputation, and bottom line. Here's an overview of risk management:\\n\\n**What is Risk Management?**\\n\\nRisk management is the process of identifying, assessing, and mitigating potential risks that could impact an organization's goals, objectives, and stakeholders. It involves a systematic approach to understanding and managing risks, which can be categorized into three main types:\\n\\n1. **Strategic Risk**: Risks related to an organization's overall strategy, such as market risks, competitive risks, and regulatory risks.\\n2. **Operational Risk**: Risks related to an organization's day-to-day operations, such as process risks, human resources risks, and supply chain risks.\\n3. **Reputational Risk**: Risks related to an organization's reputation, such as brand risks, customer risks, and stakeholder risks.\\n\\n**The Risk Management Process**\\n\\nThe risk management process typically involves the following steps:\\n\\n1. **Risk Identification**: Identifying potential risks that could impact the organization.\\n2. **Risk Assessment**: Assessing the likelihood and potential impact of each identified risk.\\n3. **Risk Prioritization**: Prioritizing risks based on their likelihood and potential impact.\\n4. **Risk Mitigation**: Implementing controls and mitigation strategies to reduce the likelihood or impact of each prioritized risk.\\n5. **Risk Monitoring**: Continuously monitoring and reviewing the effectiveness of risk mitigation strategies.\\n6. **Risk Reporting**: Reporting risk-related information to stakeholders, including the risk management team, senior management, and the board of directors.\\n\\n**Benefits of Risk Management**\\n\\nEffective risk management can bring numerous benefits to an organization, including:\\n\\n1. **Improved Decision-Making**: Risk management helps organizations make informed decisions by considering potential risks and opportunities.\\n2. **Increased Efficiency**: Risk management can help streamline processes and reduce waste by identifying and mitigating potential risks.\\n3. **Enhanced Reputation**: Organizations that effectively manage risks can maintain a strong reputation and build trust with stakeholders.\\n4. **Reduced Costs**: Risk management can help reduce costs by identifying and mitigating potential risks that could impact the organization's bottom line.\\n5. **Increased Compliance**: Risk management can help organizations comply with regulatory requirements and industry standards.\\n\\n**Risk Management Frameworks**\\n\\nThere are several risk management frameworks that organizations can use to guide their risk management efforts, including:\\n\\n1. **ISO 31000**: A widely recognized international standard for risk management.\\n2. **COSO ERM**: A framework developed by the Committee of Sponsoring Organizations of the Treadway Commission.\\n3. **NIST Cybersecurity Framework**: A framework developed by the National Institute of Standards and Technology.\\n\\nI hope this information helps! Let me know if you have any specific questions or if there's anything else I can help with.\"}]}]\n"
           ]
         }
       ]
