--- a/System_eng_v5.ipynb
+++ b/System_eng_v5.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v5.ipynb",
-      "authorship_tag": "ABX9TyN5EV1nBXKLwuOs3g1d4fZI",
+      "authorship_tag": "ABX9TyM8iPzVx5XZwpzc/D8qk/Wc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,10 +57,22 @@
         "pip install cohere"
       ],
       "metadata": {
-        "id": "aX68-3fmc8-V"
+        "id": "aX68-3fmc8-V",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "aa7205c6-b53a-4f9b-c247-522c958b3c48"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Successfully installed boto3-1.34.141 botocore-1.34.141 cohere-5.5.8 fastavro-1.9.5 h11-0.14.0 httpcore-1.0.5 httpx-0.27.0 httpx-sse-0.4.0 jmespath-1.0.1 parameterized-0.9.0 s3transfer-0.10.2 types-requests-2.32.0.20240622\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -438,12 +450,12 @@
       ],
       "metadata": {
         "id": "WqXLxhi5c3Aa",
-        "outputId": "d8351f4f-9a55-43af-cdf0-24511ab04278",
+        "outputId": "176a63a2-b47f-435d-ea8b-5e4e8d0bbf20",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,9 +478,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8acd65c4-c638-4292-d524-dad139d9bd24"
+        "outputId": "78ef66af-2ad3-43d8-f48e-0271a72fe20c"
       },
-      "execution_count": 11,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -482,15 +494,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 1.133s\n",
+            "updated 1 package and audited 36 packages in 0.474s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.324s\n",
-            "your url is: https://ready-rabbits-reply.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.453s\n",
+            "your url is: https://tall-spies-move.loca.lt\n",
             "^C\n"
           ]
         }
@@ -682,16 +694,17 @@
         "\n",
         "# Initialize Model\n",
         "def initialize_model():\n",
-        "    model_id = \"meta-llama/Meta-Llama-3-8B-Instruct\"\n",
+        "    model_id = \"unsloth/llama-3-8b-Instruct-bnb-4bit\"\n",
+        "    '''\n",
         "    bnb_config = BitsAndBytesConfig(\n",
         "        load_in_4bit=True, bnb_4bit_use_double_quant=True, bnb_4bit_quant_type=\"nf4\", bnb_4bit_compute_dtype=torch.bfloat16\n",
-        "    )\n",
+        "    )'''\n",
         "    tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
         "    model = AutoModelForCausalLM.from_pretrained(\n",
         "        model_id,\n",
         "        torch_dtype=torch.bfloat16,\n",
-        "        device_map=\"auto\",\n",
-        "        quantization_config=bnb_config\n",
+        "        device_map=\"auto\"\n",
+        "        #quantization_config=bnb_config\n",
         "    )\n",
         "    return tokenizer, model\n",
         "\n",
@@ -855,9 +868,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lmc8yIwmcKIF",
-        "outputId": "7370571a-c697-4bea-e34b-deeeb8858d58"
+        "outputId": "0694d53d-4194-40d5-9f5a-ed787c7948a7"
       },
-      "execution_count": 24,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -880,9 +893,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FS_jqNDOdunC",
-        "outputId": "07fcef1f-7c74-4f91-e96e-8f2ad2d7db77"
+        "outputId": "5e1c9b5d-8b8c-4129-d7c8-fc68be9773cc"
       },
-      "execution_count": 25,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
@@ -896,15 +909,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.443s\n",
+            "updated 1 package and audited 36 packages in 0.439s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.816s\n",
-            "your url is: https://quiet-donkeys-attend.loca.lt\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.198s\n",
+            "your url is: https://mean-ears-wonder.loca.lt\n",
             "^C\n"
           ]
         }
@@ -925,11 +938,11 @@
         "print(result)"
       ],
       "metadata": {
-        "id": "NGk9SHVfnI24",
-        "outputId": "f2cb249c-252e-4158-9113-8fcd93a7577e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "NGk9SHVfnI24",
+        "outputId": "f2cb249c-252e-4158-9113-8fcd93a7577e"
       },
       "execution_count": 21,
       "outputs": [
