--- a/System_eng_v6.ipynb
+++ b/System_eng_v6.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "A100",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v6.ipynb",
-      "authorship_tag": "ABX9TyMOgt/iKCcXNEllcBNMYORq",
+      "authorship_tag": "ABX9TyM3fuDEaA9FpwOC0J/Wto6u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -582,8 +582,8 @@
         "    document_loader = PyPDFDirectoryLoader(data_path)\n",
         "    raw_documents = document_loader.load()\n",
         "    text_splitter = RecursiveCharacterTextSplitter(\n",
-        "        chunk_size=800,\n",
-        "        chunk_overlap=80,\n",
+        "        chunk_size=1000,\n",
+        "        chunk_overlap=100,\n",
         "        length_function=len\n",
         "    )\n",
         "    return text_splitter.split_documents(raw_documents)\n",
@@ -617,7 +617,7 @@
         "\n",
         "        return vectorstore.as_retriever(\n",
         "            search_type=\"mmr\",\n",
-        "            search_kwargs={'k': 4, 'lambda_mult': 0.50}\n",
+        "            search_kwargs={'k': 4, 'lambda_mult': 0.75}\n",
         "        )\n",
         "    except Exception as e:\n",
         "        print(f\"Error initializing vectorstore: {e}\")\n",
@@ -790,7 +790,7 @@
         "from nltk.tokenize import sent_tokenize\n",
         "\n",
         "# Post-processing fonksiyonu: cosine similarity ile benzer cümleleri kaldırır\n",
-        "def remove_repetitions(response, threshold=0.8):\n",
+        "def remove_repetitions(response, threshold=0.9):\n",
         "    # Cümlelere bölme\n",
         "    sentences = sent_tokenize(response)\n",
         "\n",
@@ -905,19 +905,19 @@
         "page_names_to_funcs[selected_page]()"
       ],
       "metadata": {
-        "id": "BH3B_jiEb9Hp",
-        "outputId": "7799a690-1f02-4668-982a-26e157ac435b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "BH3B_jiEb9Hp",
+        "outputId": "3cbd7512-9d11-4212-98dd-1147268f23ce"
       },
-      "execution_count": 17,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing app_v10.py\n"
+            "Overwriting app_v10.py\n"
           ]
         }
       ]
