--- a/System_eng_v6.ipynb
+++ b/System_eng_v6.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "A100",
+      "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v6.ipynb",
-      "authorship_tag": "ABX9TyM3fuDEaA9FpwOC0J/Wto6u",
+      "authorship_tag": "ABX9TyMGnHENC1DDcODKrWOzyi4A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -94,10 +94,25 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "XX2JQlEx6v4Y"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XX2JQlEx6v4Y",
+        "outputId": "553fd2e9-d7ed-4e3c-c9d3-8c3525859c59"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -583,7 +598,7 @@
         "    raw_documents = document_loader.load()\n",
         "    text_splitter = RecursiveCharacterTextSplitter(\n",
         "        chunk_size=1000,\n",
-        "        chunk_overlap=100,\n",
+        "        chunk_overlap=200,\n",
         "        length_function=len\n",
         "    )\n",
         "    return text_splitter.split_documents(raw_documents)\n",
@@ -909,15 +924,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BH3B_jiEb9Hp",
-        "outputId": "3cbd7512-9d11-4212-98dd-1147268f23ce"
+        "outputId": "e6a3aaec-d61f-45fe-ea75-8bc4be8b7238"
       },
-      "execution_count": 23,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting app_v10.py\n"
+            "Writing app_v10.py\n"
           ]
         }
       ]
@@ -930,10 +945,40 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "wBjWGniCcB0s"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wBjWGniCcB0s",
+        "outputId": "d97d8c60-1e45-4a10-efac-9be4bafd6f4c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
+            "\u001b[0m\n",
+            "+ localtunnel@2.0.2\n",
+            "added 22 packages from 22 contributors and audited 22 packages in 2.152s\n",
+            "\n",
+            "3 packages are looking for funding\n",
+            "  run `npm fund` for details\n",
+            "\n",
+            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
+            "  run `npm audit fix` to fix them, or `npm audit` for details\n",
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.07s\n",
+            "your url is: https://cold-chefs-switch.loca.lt\n",
+            "^C\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
