--- a/System_eng_v6.ipynb
+++ b/System_eng_v6.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v6.ipynb",
-      "authorship_tag": "ABX9TyMGnHENC1DDcODKrWOzyi4A",
+      "authorship_tag": "ABX9TyNtg8+VplWsvhIYnOEHw+FZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,56 +32,12 @@
     {
       "cell_type": "code",
       "source": [
-        "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu langchain_chroma langchain_experimental"
+        "pip install langchain openai pypdf chroma streamlit langchain_openai langchain_community langchain transformers bitsandbytes accelerate torch faiss-gpu faiss-cpu langchain_chroma langchain_experimental sentence-transformers cohere rank_bm25 nltk scikit-learn"
       ],
       "metadata": {
         "id": "bHLuLa1F6nIk"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install sentence-transformers"
-      ],
-      "metadata": {
-        "id": "oFrUA1SG6nkE"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install cohere"
-      ],
-      "metadata": {
-        "id": "99W__bAT6poM"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install rank_bm25"
-      ],
-      "metadata": {
-        "id": "7A5w7goR6tu_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pip install nltk scikit-learn"
-      ],
-      "metadata": {
-        "id": "tvgRbK9ncib-"
-      },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -98,9 +54,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XX2JQlEx6v4Y",
-        "outputId": "553fd2e9-d7ed-4e3c-c9d3-8c3525859c59"
+        "outputId": "78767f4a-967e-446a-9f26-b2203ef7c592"
       },
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +72,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "WarVanvc_MmD",
         "colab": {
@@ -498,7 +454,7 @@
         "id": "HD56vwMf6z5a",
         "outputId": "94421d57-45c5-40f4-ea13-f98908cab9b6"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -926,7 +882,7 @@
         "id": "BH3B_jiEb9Hp",
         "outputId": "e6a3aaec-d61f-45fe-ea75-8bc4be8b7238"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -951,7 +907,7 @@
         "id": "wBjWGniCcB0s",
         "outputId": "d97d8c60-1e45-4a10-efac-9be4bafd6f4c"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
