--- a/System_eng_v6.ipynb
+++ b/System_eng_v6.ipynb
@@ -4,9 +4,9 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4",
+      "gpuType": "T4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/System_eng_v6.ipynb",
-      "authorship_tag": "ABX9TyNtg8+VplWsvhIYnOEHw+FZ",
+      "authorship_tag": "ABX9TyP+lVCnpyok7Qh4gLOZ8efI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
       "metadata": {
         "id": "bHLuLa1F6nIk"
       },
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -50,25 +50,10 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "XX2JQlEx6v4Y",
-        "outputId": "78767f4a-967e-446a-9f26-b2203ef7c592"
+        "id": "XX2JQlEx6v4Y"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
-            "Token is valid (permission: read).\n",
-            "Your token has been saved to /root/.cache/huggingface/token\n",
-            "Login successful\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -901,54 +886,33 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "wBjWGniCcB0s",
-        "outputId": "d97d8c60-1e45-4a10-efac-9be4bafd6f4c"
+        "id": "wBjWGniCcB0s"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
-            "\u001b[0m\n",
-            "+ localtunnel@2.0.2\n",
-            "added 22 packages from 22 contributors and audited 22 packages in 2.152s\n",
-            "\n",
-            "3 packages are looking for funding\n",
-            "  run `npm fund` for details\n",
-            "\n",
-            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
-            "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.07s\n",
-            "your url is: https://cold-chefs-switch.loca.lt\n",
-            "^C\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Use a pipeline as a high-level helper\n",
         "from transformers import pipeline\n",
         "\n",
         "messages = [\n",
-        "    {\"role\": \"user\", \"content\": \"gereksinim hakkında bilgi verir misin?\"},\n",
+        "    {\"role\": \"user\", \"content\": \"Değişiklik yönetimi nedir? Türkçe açıklar mısın?\"},\n",
         "]\n",
+        "\n",
+        "# Modeli yükle ve pipeline oluştur\n",
         "pipe = pipeline(\"text-generation\", model=\"unsloth/llama-3-8b-Instruct-bnb-4bit\")\n",
-        "# Set max_new_tokens to control the length of generated text\n",
-        "result = pipe(messages, max_new_tokens=1024)  # Adjust the value as needed\n",
-        "print(result)"
+        "\n",
+        "# Metin üretimini gerçekleştir\n",
+        "result = pipe(messages, max_new_tokens=1024)  # Gerekli değeri ayarlayın\n",
+        "\n",
+        "# Asistanın cevabını alın\n",
+        "assistant_response = result[0]['generated_text'][1]['content']\n",
+        "\n",
+        "# Cevabı \"\\n\\n\" olmadan düzenleyin\n",
+        "formatted_response = assistant_response.replace(\"\\n\\n\", \" \")\n",
+        "\n",
+        "print(formatted_response)"
       ],
       "metadata": {
         "id": "Vs1ODROG61Oj"
