--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyNvGgVycaMld1kHfPbjVs3P",
+      "authorship_tag": "ABX9TyO4ALsP+qTilCUr/Y/IPlhG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -227,6 +227,35 @@
         "    This is the information we have to answer the question: {context_data}\n",
         "    \"\"\", metadata_info\n",
         "\n",
+        "# Post-processing fonksiyonu: cosine similarity ile benzer cümleleri kaldırır\n",
+        "def remove_repetitions(response, threshold=0.80):\n",
+        "    # Cümlelere bölme\n",
+        "    sentences = sent_tokenize(response)\n",
+        "\n",
+        "    # TF-IDF vektörizer oluşturma\n",
+        "    vectorizer = TfidfVectorizer().fit_transform(sentences)\n",
+        "    vectors = vectorizer.toarray()\n",
+        "\n",
+        "    # Cosine similarity hesaplama\n",
+        "    cosine_matrix = cosine_similarity(vectors)\n",
+        "\n",
+        "    # Tekrar eden cümleleri tespit etme ve kaldırma\n",
+        "    unique_sentences = []\n",
+        "    seen_indices = set()\n",
+        "\n",
+        "    for i in range(len(sentences)):\n",
+        "        if i in seen_indices:\n",
+        "            continue\n",
+        "        unique_sentences.append(sentences[i])\n",
+        "        for j in range(i + 1, len(sentences)):\n",
+        "            if cosine_matrix[i, j] > threshold:\n",
+        "                seen_indices.add(j)\n",
+        "\n",
+        "    # Tekrarları kaldırılmış yanıtı yeniden oluşturma\n",
+        "    cleaned_response = ' '.join(unique_sentences)\n",
+        "\n",
+        "    return cleaned_response\n",
+        "\n",
         "# RAG with Multiple PDFs\n",
         "def rag_with_multiple_pdfs(prompt, chat_history):\n",
         "    splitted_documents = load_and_split_documents(DATA_PATH, embeddings)\n",
@@ -246,7 +275,8 @@
         "\n",
         "\n",
         "    context_data = \" \".join([doc.page_content for doc in hybrid_search_documents])\n",
-        "    final_prompt, metadata_info = generate_final_prompt(prompt, context_data, chat_history, hybrid_search_documents)\n",
+        "    cleaned_context_data = remove_repetitions(context_data)\n",
+        "    final_prompt, metadata_info = generate_final_prompt(prompt, cleaned_context_data, chat_history, hybrid_search_documents)\n",
         "    return final_prompt, metadata_info, chroma_relevant_documents, bm25_documents, hybrid_search_documents\n",
         "\n",
         "# Initialize Model\n",
@@ -344,34 +374,7 @@
         "nltk.download('punkt')\n",
         "from nltk.tokenize import sent_tokenize\n",
         "\n",
-        "# Post-processing fonksiyonu: cosine similarity ile benzer cümleleri kaldırır\n",
-        "def remove_repetitions(response, threshold=0.85):\n",
-        "    # Cümlelere bölme\n",
-        "    sentences = sent_tokenize(response)\n",
         "\n",
-        "    # TF-IDF vektörizer oluşturma\n",
-        "    vectorizer = TfidfVectorizer().fit_transform(sentences)\n",
-        "    vectors = vectorizer.toarray()\n",
-        "\n",
-        "    # Cosine similarity hesaplama\n",
-        "    cosine_matrix = cosine_similarity(vectors)\n",
-        "\n",
-        "    # Tekrar eden cümleleri tespit etme ve kaldırma\n",
-        "    unique_sentences = []\n",
-        "    seen_indices = set()\n",
-        "\n",
-        "    for i in range(len(sentences)):\n",
-        "        if i in seen_indices:\n",
-        "            continue\n",
-        "        unique_sentences.append(sentences[i])\n",
-        "        for j in range(i + 1, len(sentences)):\n",
-        "            if cosine_matrix[i, j] > threshold:\n",
-        "                seen_indices.add(j)\n",
-        "\n",
-        "    # Tekrarları kaldırılmış yanıtı yeniden oluşturma\n",
-        "    cleaned_response = ' '.join(unique_sentences)\n",
-        "\n",
-        "    return cleaned_response\n",
         "\n",
         "import streamlit as st\n",
         "\n",
@@ -443,11 +446,8 @@
         "                        final_prompt, metadata_info, st.session_state.chroma_relevant_documents, st.session_state.bm25_documents, st.session_state.hybrid_search_documents = rag_with_multiple_pdfs(st.session_state.optimized_prompt, st.session_state.messages)\n",
         "                        response = generate_llama3_response(final_prompt, tokenizer, model)\n",
         "\n",
-        "                        # Post-processing: cosine similarity ile tekrar eden cümleleri kaldırma\n",
-        "                        cleaned_response = remove_repetitions(response)\n",
-        "\n",
         "                        placeholder = st.empty()\n",
-        "                        full_response = cleaned_response + \"\\n\\nMetadata Bilgileri:\\n\" + metadata_info\n",
+        "                        full_response = response + \"\\n\\nMetadata Bilgileri:\\n\" + metadata_info\n",
         "                        placeholder.markdown(full_response)\n",
         "                        message = {\"role\": \"assistant\", \"content\": response}\n",
         "                        st.session_state.messages.append(message)\n",
@@ -505,13 +505,13 @@
         "\n"
       ],
       "metadata": {
-        "id": "oZMvzQPcRgE_",
-        "outputId": "c4f48ed7-4681-410f-8dc7-8c7a2db85990",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "oZMvzQPcRgE_",
+        "outputId": "ed9511b8-cc18-4653-c1f1-7253b9e02e7c"
       },
-      "execution_count": 16,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -530,36 +530,35 @@
         "!npx localtunnel --port 8501"
       ],
       "metadata": {
-        "id": "lZTw5q1mRhfI",
-        "outputId": "0343384a-53a8-4ec6-a163-c5aa7b7c762e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lZTw5q1mRhfI",
+        "outputId": "09f9873a-35b9-4528-d638-5bf017cb8a66"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.382s\n",
+            "+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 0.404s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.521s\n",
-            "your url is: https://nine-boxes-mate.loca.lt\n",
-            "^C\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.525s\n",
+            "your url is: https://odd-bats-grin.loca.lt\n"
           ]
         }
       ]
