--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyO4ALsP+qTilCUr/Y/IPlhG",
+      "authorship_tag": "ABX9TyO4cZeeE7lgRTc4+cW6K5as",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,7 +228,7 @@
         "    \"\"\", metadata_info\n",
         "\n",
         "# Post-processing fonksiyonu: cosine similarity ile benzer cümleleri kaldırır\n",
-        "def remove_repetitions(response, threshold=0.80):\n",
+        "def remove_repetitions(response, threshold=0.9):\n",
         "    # Cümlelere bölme\n",
         "    sentences = sent_tokenize(response)\n",
         "\n",
@@ -395,7 +395,7 @@
         "\n",
         "# Function for login\n",
         "def login():\n",
-        "    st.title(\"Giriş Yap\")\n",
+        "    st.title(\"Sistem Mühendisliği Chatbot Giriş Ekranı\")\n",
         "\n",
         "    if st.session_state['logged_in']:\n",
         "        st.success(\"Başarıyla giriş yaptınız\")\n",
@@ -413,9 +413,13 @@
         "\n",
         "# Function for Chat App\n",
         "def show_chat_app():\n",
-        "    st.sidebar.button('Oturumu Kapat', on_click=logout)\n",
-        "    st.sidebar.button('Clear Chat History', on_click=clear_chat_history)\n",
-        "    st.title(\"Chat Uygulaması\")\n",
+        "    col1, col2 = st.sidebar.columns(2)  # Two columns for the buttons\n",
+        "    with col1:\n",
+        "        st.button('Oturumu Kapat', on_click=logout)\n",
+        "    with col2:\n",
+        "        st.button('Sohbeti Temizle', on_click=clear_chat_history)\n",
+        "\n",
+        "    st.title(\"Başlangıç Seviye Sistem Mühendisliği Chat Uygulaması\")\n",
         "\n",
         "    # Your existing chat app code here\n",
         "    # Replace with your existing main function code\n",
@@ -427,7 +431,7 @@
         "    st.session_state.hybrid_search_documents = []\n",
         "\n",
         "    if \"messages\" not in st.session_state.keys():\n",
-        "        st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "        st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"Bugün sana nasıl yardımcı olabilirim?\"}]\n",
         "\n",
         "    for message in st.session_state.messages:\n",
         "        with st.chat_message(message[\"role\"]):\n",
@@ -441,7 +445,7 @@
         "\n",
         "        if st.session_state.messages[-1][\"role\"] != \"assistant\":\n",
         "            with st.chat_message(\"assistant\"):\n",
-        "                with st.spinner(\"Thinking...\"):\n",
+        "                with st.spinner(\"Düşünüyorum...\"):\n",
         "                    try:\n",
         "                        final_prompt, metadata_info, st.session_state.chroma_relevant_documents, st.session_state.bm25_documents, st.session_state.hybrid_search_documents = rag_with_multiple_pdfs(st.session_state.optimized_prompt, st.session_state.messages)\n",
         "                        response = generate_llama3_response(final_prompt, tokenizer, model)\n",
@@ -457,18 +461,18 @@
         "# Function to logout\n",
         "def logout():\n",
         "    st.session_state['logged_in'] = False\n",
-        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"Bugün sana nasıl yardımcı olabilirim?\"}]\n",
         "\n",
         "# Function to clear chat history\n",
         "def clear_chat_history():\n",
-        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"How may I assist you today?\"}]\n",
+        "    st.session_state.messages = [{\"role\": \"assistant\", \"content\": \"Bugün sana nasıl yardımcı olabilirim?\"}]\n",
         "\n",
         "# Function for Sayfa 2\n",
         "def show_documents():\n",
         "    if not st.session_state['logged_in']:\n",
         "        st.warning(\"Önce giriş yapmalısınız.\")\n",
         "    else:\n",
-        "        st.title(\"Sayfa 2\")\n",
+        "        st.title(\"Optimize Prompt ve Dokümanlar\")\n",
         "        col_opt_prompt ,col_keyword, col_hybrid, col_semantic = st.columns(4)\n",
         "\n",
         "        with col_opt_prompt:\n",
@@ -497,10 +501,10 @@
         "# Streamlit app with multiple pages\n",
         "page_names_to_funcs = {\n",
         "    \"Ana Sayfa\": main,\n",
-        "    \"Sayfa 2\": show_documents,\n",
+        "    \"Optimize Prompt ve Dokümanlar\": show_documents,\n",
         "}\n",
         "\n",
-        "selected_page = st.sidebar.selectbox(\"Sayfa seçin\", page_names_to_funcs.keys())\n",
+        "selected_page = st.sidebar.selectbox(\"Sayfa seçiniz\", page_names_to_funcs.keys())\n",
         "page_names_to_funcs[selected_page]()\n",
         "\n"
       ],
@@ -509,9 +513,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oZMvzQPcRgE_",
-        "outputId": "ed9511b8-cc18-4653-c1f1-7253b9e02e7c"
+        "outputId": "9d300c0a-a75c-4611-9043-d1ec5efbfbc0"
       },
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -534,7 +538,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZTw5q1mRhfI",
-        "outputId": "09f9873a-35b9-4528-d638-5bf017cb8a66"
+        "outputId": "89d2b0ee-20df-46b5-e3db-4143896cd82a"
       },
       "execution_count": null,
       "outputs": [
@@ -550,15 +554,15 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.404s\n",
+            "updated 1 package and audited 36 packages in 0.389s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.525s\n",
-            "your url is: https://odd-bats-grin.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.534s\n",
+            "your url is: https://dirty-rocks-think.loca.lt\n"
           ]
         }
       ]
