--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyO4cZeeE7lgRTc4+cW6K5as",
+      "authorship_tag": "ABX9TyOmoh49WWclcNC31xQ0KbE2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -228,7 +228,7 @@
         "    \"\"\", metadata_info\n",
         "\n",
         "# Post-processing fonksiyonu: cosine similarity ile benzer cümleleri kaldırır\n",
-        "def remove_repetitions(response, threshold=0.9):\n",
+        "def remove_repetitions(response, threshold=0.8):\n",
         "    # Cümlelere bölme\n",
         "    sentences = sent_tokenize(response)\n",
         "\n",
@@ -513,15 +513,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oZMvzQPcRgE_",
-        "outputId": "9d300c0a-a75c-4611-9043-d1ec5efbfbc0"
+        "outputId": "eaff0614-e560-427d-fb67-636b5c402f74"
       },
-      "execution_count": 34,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Overwriting app_v10.py\n"
+            "Writing app_v10.py\n"
           ]
         }
       ]
@@ -538,7 +538,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZTw5q1mRhfI",
-        "outputId": "89d2b0ee-20df-46b5-e3db-4143896cd82a"
+        "outputId": "75836b1c-acfb-456f-f9a9-0d831b5661e9"
       },
       "execution_count": null,
       "outputs": [
@@ -547,22 +547,23 @@
           "name": "stdout",
           "text": [
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
+            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 0.389s\n",
+            "added 22 packages from 22 contributors and audited 22 packages in 1.808s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
-            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
+            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.534s\n",
-            "your url is: https://dirty-rocks-think.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.124s\n",
+            "your url is: https://crazy-colts-cover.loca.lt\n"
           ]
         }
       ]
