--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "gpuType": "L4",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyOmoh49WWclcNC31xQ0KbE2",
+      "authorship_tag": "ABX9TyMVP1nuwrIji7zLsi7m0TC8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,8 +137,8 @@
         "    document_loader = PyPDFDirectoryLoader(data_path)\n",
         "    raw_documents = document_loader.load()\n",
         "    text_splitter = RecursiveCharacterTextSplitter(\n",
-        "        chunk_size=1000,\n",
-        "        chunk_overlap=200,\n",
+        "        chunk_size=800,\n",
+        "        chunk_overlap=100,\n",
         "        length_function=len\n",
         "    )\n",
         "    return text_splitter.split_documents(raw_documents)\n",
@@ -172,7 +172,7 @@
         "\n",
         "        return vectorstore.as_retriever(\n",
         "            search_type=\"mmr\",\n",
-        "            search_kwargs={'k': 4, 'lambda_mult': 0.75}\n",
+        "            search_kwargs={'k': 8, 'lambda_mult': 0.75}\n",
         "        )\n",
         "    except Exception as e:\n",
         "        print(f\"Error initializing vectorstore: {e}\")\n",
@@ -513,15 +513,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oZMvzQPcRgE_",
-        "outputId": "eaff0614-e560-427d-fb67-636b5c402f74"
+        "outputId": "7f6e7b6a-0e3a-4da7-b77d-736fd0a28ab8"
       },
-      "execution_count": 4,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Writing app_v10.py\n"
+            "Overwriting app_v10.py\n"
           ]
         }
       ]
@@ -538,7 +538,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZTw5q1mRhfI",
-        "outputId": "75836b1c-acfb-456f-f9a9-0d831b5661e9"
+        "outputId": "a427d019-37ba-4dc0-c19c-024f36879e9d"
       },
       "execution_count": null,
       "outputs": [
@@ -547,23 +547,22 @@
           "name": "stdout",
           "text": [
             "\u001b[K\u001b[?25h\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35msaveError\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
-            "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[34;40mnotice\u001b[0m\u001b[35m\u001b[0m created a lockfile as package-lock.json. You should commit this file.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m \u001b[0m\u001b[35menoent\u001b[0m ENOENT: no such file or directory, open '/content/package.json'\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No description\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No repository field.\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No README data\n",
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
-            "+ localtunnel@2.0.2\n",
-            "added 22 packages from 22 contributors and audited 22 packages in 1.808s\n",
+            "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
+            "updated 1 package and audited 36 packages in 2.23s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
-            "found 1 \u001b[93mmoderate\u001b[0m severity vulnerability\n",
+            "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 1.124s\n",
-            "your url is: https://crazy-colts-cover.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 2.173s\n",
+            "your url is: https://dry-candles-glow.loca.lt\n"
           ]
         }
       ]
