--- a/system_eng_part7.ipynb
+++ b/system_eng_part7.ipynb
@@ -4,9 +4,10 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "L4",
+      "gpuType": "A100",
+      "machine_shape": "hm",
       "mount_file_id": "https://github.com/kmk4444/System_engineering/blob/main/system_eng_part7.ipynb",
-      "authorship_tag": "ABX9TyMVP1nuwrIji7zLsi7m0TC8",
+      "authorship_tag": "ABX9TyP4P8mUUzAoueiWp8i4SRBF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,10 +62,25 @@
         "login(token = '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')"
       ],
       "metadata": {
-        "id": "bkfRKUbXRccW"
+        "id": "bkfRKUbXRccW",
+        "outputId": "c0e36fa8-5461-4142-fd18-fd0bdff76afa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The token has not been saved to the git credentials helper. Pass `add_to_git_credential=True` in this function directly or `--add-to-git-credential` if using via `huggingface-cli` if you want to set the git credential as well.\n",
+            "Token is valid (permission: read).\n",
+            "Your token has been saved to /root/.cache/huggingface/token\n",
+            "Login successful\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -116,7 +132,7 @@
         "my_key_cohere=\"RsdlzOlRrQmvf5bxQrUHDpfbeg7Fvfr7WJwGCec1\"\n",
         "\n",
         "# Set up Streamlit page configuration\n",
-        "st.set_page_config(page_title=\"🦙💬 Sistem Mühendisliği Giriş Chatbot\")\n",
+        "st.set_page_config(page_title=\"🤖💬 Sistem Mühendisliği Chatbot\")\n",
         "\n",
         "# Constants\n",
         "DATA_PATH = \"/content/drive/MyDrive/data\"  # PDF dosyalarının bulunduğu dizin\n",
@@ -137,8 +153,8 @@
         "    document_loader = PyPDFDirectoryLoader(data_path)\n",
         "    raw_documents = document_loader.load()\n",
         "    text_splitter = RecursiveCharacterTextSplitter(\n",
-        "        chunk_size=800,\n",
-        "        chunk_overlap=100,\n",
+        "        chunk_size=1000,\n",
+        "        chunk_overlap=50,\n",
         "        length_function=len\n",
         "    )\n",
         "    return text_splitter.split_documents(raw_documents)\n",
@@ -172,7 +188,7 @@
         "\n",
         "        return vectorstore.as_retriever(\n",
         "            search_type=\"mmr\",\n",
-        "            search_kwargs={'k': 8, 'lambda_mult': 0.75}\n",
+        "            search_kwargs={'k': 10, 'lambda_mult': 0.40}\n",
         "        )\n",
         "    except Exception as e:\n",
         "        print(f\"Error initializing vectorstore: {e}\")\n",
@@ -186,7 +202,7 @@
         "def get_relevant_documents_with_bm25(documents, query):\n",
         "\n",
         "    bm25_retriever = BM25Retriever.from_documents(documents=documents)\n",
-        "    bm25_retriever.k = 4\n",
+        "    bm25_retriever.k = 5\n",
         "\n",
         "    bm25_relevant_documents = bm25_retriever.get_relevant_documents(query=query)\n",
         "\n",
@@ -228,7 +244,7 @@
         "    \"\"\", metadata_info\n",
         "\n",
         "# Post-processing fonksiyonu: cosine similarity ile benzer cümleleri kaldırır\n",
-        "def remove_repetitions(response, threshold=0.8):\n",
+        "def remove_repetitions(response, threshold=0.7):\n",
         "    # Cümlelere bölme\n",
         "    sentences = sent_tokenize(response)\n",
         "\n",
@@ -327,8 +343,8 @@
         "        max_new_tokens=1024,\n",
         "        eos_token_id=tokenizer.eos_token_id,\n",
         "        do_sample=True,\n",
-        "        temperature=0.5,\n",
-        "        top_p=1,\n",
+        "        temperature=0.70,\n",
+        "        top_p=0.90,\n",
         "    )\n",
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
@@ -359,8 +375,8 @@
         "        max_new_tokens=1024,\n",
         "        eos_token_id=tokenizer.eos_token_id,\n",
         "        do_sample=True,\n",
-        "        temperature=0.5,\n",
-        "        top_p=1,\n",
+        "        temperature=0.85,\n",
+        "        top_p=0.90,\n",
         "    )\n",
         "\n",
         "    response = outputs[0][input_ids.shape[-1]:]\n",
@@ -419,7 +435,7 @@
         "    with col2:\n",
         "        st.button('Sohbeti Temizle', on_click=clear_chat_history)\n",
         "\n",
-        "    st.title(\"Başlangıç Seviye Sistem Mühendisliği Chat Uygulaması\")\n",
+        "    st.title(\"🤖 Başlangıç Seviye Sistem Mühendisliği Chat Uygulaması\")\n",
         "\n",
         "    # Your existing chat app code here\n",
         "    # Replace with your existing main function code\n",
@@ -513,9 +529,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oZMvzQPcRgE_",
-        "outputId": "7f6e7b6a-0e3a-4da7-b77d-736fd0a28ab8"
+        "outputId": "92aa9f1e-7460-4659-abb0-bccf696ed16a"
       },
-      "execution_count": 10,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -538,9 +554,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lZTw5q1mRhfI",
-        "outputId": "a427d019-37ba-4dc0-c19c-024f36879e9d"
+        "outputId": "64aacaa3-03f9-49f3-92b8-aa8aa5eba3c4"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,15 +570,16 @@
             "\u001b[0m\u001b[37;40mnpm\u001b[0m \u001b[0m\u001b[30;43mWARN\u001b[0m\u001b[35m\u001b[0m content No license field.\n",
             "\u001b[0m\n",
             "\u001b[K\u001b[?25h+ localtunnel@2.0.2\n",
-            "updated 1 package and audited 36 packages in 2.23s\n",
+            "updated 1 package and audited 36 packages in 0.48s\n",
             "\n",
             "3 packages are looking for funding\n",
             "  run `npm fund` for details\n",
             "\n",
             "found 2 \u001b[93mmoderate\u001b[0m severity vulnerabilities\n",
             "  run `npm audit fix` to fix them, or `npm audit` for details\n",
-            "\u001b[K\u001b[?25hnpx: installed 22 in 2.173s\n",
-            "your url is: https://dry-candles-glow.loca.lt\n"
+            "\u001b[K\u001b[?25hnpx: installed 22 in 1.601s\n",
+            "your url is: https://fair-rocks-appear.loca.lt\n",
+            "^C\n"
           ]
         }
       ]
